--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
 
 body {
   margin: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   background-color: var(--body-background-color);
   font-family: var(--text-font-family);
   font-size: 1.125rem;
@@ -27,4 +31,8 @@ h1 {
 
   color: snow;
   text-shadow: 2px 2px #1a1a1a;
+}
+
+.checked-content-list {
+  text-align: center;
 }
