--- a/style.css
+++ b/style.css
@@ -40,16 +40,23 @@ h1 {
 }
 
 .second-password-field {
-  margin-top: 0.25rem;
+  margin-top: 0.55rem;
+}
+
+.style-password-box {
+  border: 2px solid var(--border-color);
+  border-radius: 0.125rem;
 }
 
 #show-hide-button {
-  margin-top: 0.95rem;
+  margin-top: 0.55rem;
   border: solid 0.125rem var(--border-color);
   border-radius: 0.125rem;
-}
 
-#style-password-field {
-  border: var(--border-color);
-  border-radius: 0.125rem;
+  background-color: black;
+  color: snow;
+  font-size: 15px;
+
+  width: 13rem;
+  height: 2rem;
 }
