--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 @media screen and (min-width: 700px) {
 }
 /* two column layout above 700px screen width */
-@media screen and (min-width: 700px) {
+@media screen and (max-width: 700px) {
 }
 
 body {
@@ -60,4 +60,9 @@ h1 {
 
   width: 13rem;
   height: 2rem;
+}
+
+p::after {
+  content: "❌";
+  margin-left: 0.5rem;
 }
