--- a/style.css
+++ b/style.css
@@ -9,9 +9,7 @@
   --border-color: black;
   --shadow-color: #1a1a1a;
 }
-/* one column layout below 700px screen width */
-@media screen and (min-width: 700px) {
-}
+
 /* two column layout above 700px screen width */
 @media screen and (max-width: 700px) {
 }
@@ -35,6 +33,9 @@ h1 {
   text-shadow: 2px 2px var(--shadow-color);
 }
 
+.style-password-box {
+  justify-content: center;
+}
 .checked-content-list {
   text-align: center;
   margin-top: 3rem;
