--- a/style.css
+++ b/style.css
@@ -11,13 +11,38 @@
 
 /* two column layout above 700px screen width */
 @media screen and (max-width: 700px) {
+  header,
+  .password-card,
+  .checked-content-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.25rem;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  header,
+  .password-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.25rem;
+  }
+  /*.checked-content-list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }*/
 }
 
 body {
   margin: 0px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  _display: flex;
+  _flex-direction: column;
+  _align-items: center;
 
   background-color: var(--body-background-color);
   font-family: var(--text-font-family);
@@ -60,4 +85,8 @@ h1 {
 
   width: 13rem;
   height: 2rem;
+}
+
+.content-status {
+  margin-left: 0.25rem;
 }
